--- a/02-helloworld.yaml
+++ b/02-helloworld.yaml
@@ -1,10 +1,10 @@
 - name: hello world
   hosts: local
-  connection: local
-  tasks: 
+  connection: local # no need of username and password
+  tasks:
   - name: print hello world
     ansible.builtin.debug:
-     msg: "Hello Ansible"
+      msg: "Hello World"
 
 
 
