--- a/03-nginx.yaml
+++ b/03-nginx.yaml
@@ -1,5 +1,6 @@
 - name: install nginx and run
   hosts: frontend
+  become: yes
   tasks:
   - name: install nginx server
     ansible.builtin.package:
