--- a/05-variables.yaml
+++ b/05-variables.yaml
@@ -1,5 +1,6 @@
 - name: play level variables
   hosts: local
+  connection: localhost
   tasks:
    - name: print course information
      ansible.builtin.debug:
