--- a/05-variables.yaml
+++ b/05-variables.yaml
@@ -1,6 +1,6 @@
 - name: play level variables
   hosts: local
-  connection: localhost
+  connection: local
   tasks:
    - name: print course information
      ansible.builtin.debug:
