--- a/06-variable-tasklevel.yaml
+++ b/06-variable-tasklevel.yaml
@@ -13,6 +13,6 @@
     ansible.builtin.debug:
      msg: I'm learning {{ COURSE}}, Course duration is {{ DURATION}} and trainer is {{ TRAINER }}
 
-    name: print course information
+  - name: print course information
     ansible.builtin.debug:
      msg: I'm learning {{ COURSE}}, Course duration is {{ DURATION}} and trainer is {{ TRAINER }}
