--- a/06-variable-tasklevel.yaml
+++ b/06-variable-tasklevel.yaml
@@ -15,4 +15,4 @@
 
   - name: print course information
     ansible.builtin.debug:
-     msg: I'm learning {{ COURSE}}, Course duration is {{ DURATION}} and trainer is {{ TRAINER }}
+     msg: "I'm learning {{ COURSE}}, Course duration is {{ DURATION}} and trainer is {{ TRAINER }}"
