--- a/07-Variables-from-files.yaml
+++ b/07-Variables-from-files.yaml
@@ -1,6 +1,6 @@
 - name: variables from playlevel 
   hosts: local
-  connections: local
+  connection: local
   var_files: 
   - COURSE.yaml
   tasks:
