--- a/07-Variables-from-files.yaml
+++ b/07-Variables-from-files.yaml
@@ -1,7 +1,7 @@
 - name: variables from playlevel 
   hosts: local
   connection: local
-  var_files: 
+  vars_files:
   - COURSE.yaml
   tasks:
    - name: Check variables
