--- a/07-Variables-from-files.yaml
+++ b/07-Variables-from-files.yaml
@@ -6,4 +6,4 @@
   tasks:
    - name: Check variables
      ansible.builtin.debug:
-      msgs: I'm learning {{ COURSE }}, course duration is {{ DURATION }} and trainer is {{ TRAINER }}
+      msg: I'm learning {{ COURSE }}, course duration is {{ DURATION }} and trainer is {{ TRAINER }}
