--- a/08-vars-promt.yaml
+++ b/08-vars-promt.yaml
@@ -12,6 +12,6 @@
 
   tasks:
   - name: printing user information
-    Ansible.builtin.debug:
+    ansible.builtin.debug:
      msg: "Hello username is: {{ USERNAME }}, password is {{ PASSWORD }}"
     
