--- a/08-vars-promt.yaml
+++ b/08-vars-promt.yaml
@@ -8,7 +8,7 @@
 
   - name: PASSWORD 
     prompt: "please enter password"
-    private: false
+    private: true
 
   tasks:
   - name: printing user information
