--- a/11-vars_preferences.yaml
+++ b/11-vars_preferences.yaml
@@ -2,7 +2,7 @@
   hosts: local
   connection: local
   vars:
-   GREETINGS: "Hello from PLAY"
+   GREETING: "Hello from PLAY"
   # vars_files:
   # - COURSE.yaml
   # vars_prompt:
