--- a/11-vars_preferences.yaml
+++ b/11-vars_preferences.yaml
@@ -1,8 +1,8 @@
 - name: understand vars from preferences
   hosts: local
   connection: local
-  vars:
-   GREETING: "Hello from PLAY"
+  # vars:
+  #  GREETING: "Hello from PLAY"
   # vars_files:
   # - COURSE.yaml
   # vars_prompt:
