--- a/11-vars_preferences.yaml
+++ b/11-vars_preferences.yaml
@@ -16,6 +16,14 @@
      ansible.builtin.debug:
       msg: "{{ GREETING }}"
 
+   #1. CMD
+#2. task
+#3. File
+#4. prompt
+#5. play
+#6. inventory
+#7. roles   
+
 
   
       
