--- a/12-datatypes.yaml
+++ b/12-datatypes.yaml
@@ -3,7 +3,7 @@
   condition: local
   vars: 
     NAME: joindevops #key value 
-    courses: #list
+    COURSES: #list
      - DevOps
      - DevSecOps
      - DevOps with AWS
