--- a/12-datatypes.yaml
+++ b/12-datatypes.yaml
@@ -1,30 +1,9 @@
-- name: checking data types
+- name: checking the datatypes
   hosts: local
   condition: local
-  vars: 
-    name: joindevops #key value 
-    # COURSES: #list
-    #  - DevOps
-    #  - DevSecOps
-    #  - DevOps with AWS
-    #  - AWS
-    # Trainerswithexperiance: #key value pair
-    #  Siva: 12 years
-    #  Raghu: 10 years
-    # Trainer: True #boolean
+  vars:
+   NAME: JoinDevops
   tasks:
-  - name: print key value pair
+  - name: printing the key value pair
     ansible.builtin.debug:
-     msg: "Name: {{ NAME }}"   
-
-  # - name: print list
-  #   ansible.builtin.debug:
-  #    msg: "courses: {{ courses }}"
-
-  # - name: print map
-  #   ansible.builtin.debug:
-  #    msg: "Training with experiance : {{ Trainerswithexperiance }}"  
-
-  # - name: print boolean
-  #   ansible.builtin.debug:
-  #    msg: "is they are trainer: {{ Trainer }}" 
+     msg: "Name : {{ NAME }}"
