--- a/12-datatypes.yaml
+++ b/12-datatypes.yaml
@@ -15,7 +15,7 @@
   tasks:
   - name: print key value pair
     ansible.builtin.debug:
-     msg: "Name: {{ NAME }}"   
+     msg: "Name: {{ name }}"   
 
   # - name: print list
   #   ansible.builtin.debug:
