--- a/12-datatypes.yaml
+++ b/12-datatypes.yaml
@@ -3,27 +3,27 @@
   connection: local
   vars: 
     name: joindevops #key value 
-    # COURSES: #list
-    #  - DevOps
-    #  - DevSecOps
-    #  - DevOps with AWS
-    #  - AWS
-    # Trainerswithexperiance: #key value pair
-    #  Siva: 12 years
-    #  Raghu: 10 years
-    # Trainer: True #boolean
+    COURSES: #list
+     - DevOps
+     - DevSecOps
+     - DevOps with AWS
+     - AWS
+    Trainerswithexperiance: #key value pair
+     Siva: 12 years
+     Raghu: 10 years
+    Trainer: True #boolean
   tasks:
   - name: print key value pair
     ansible.builtin.debug:
      msg: "Name: {{ name }}"   
 
-  # - name: print list
-  #   ansible.builtin.debug:
-  #    msg: "courses: {{ courses }}"
+  - name: print list
+    ansible.builtin.debug:
+     msg: "courses: {{ courses }}"
 
-  # - name: print map
-  #   ansible.builtin.debug:
-  #    msg: "Training with experiance : {{ Trainerswithexperiance }}"  
+  - name: print map
+    ansible.builtin.debug:
+     msg: "Training with experiance : {{ Trainerswithexperiance }}"  
 
-  # - name: print boolean
-  #   ansible.builtin.debug:
+  - name: print boolean
+    ansible.builtin.debug:
