--- a/12-datatypes.yaml
+++ b/12-datatypes.yaml
@@ -19,7 +19,7 @@
 
   - name: print list
     ansible.builtin.debug:
-     msg: "courses: {{ courses }}"
+     msg: "courses: {{ COURSES }}"
 
   - name: print map
     ansible.builtin.debug:
