--- a/13-conditions.yaml
+++ b/13-conditions.yaml
@@ -6,12 +6,12 @@
   tasks:
   - name: print this is less than 20 or not
     ansible.builtin.debug:
-     msg: "given number is {{ my_numer }} is less than 20"
+     msg: "given number is {{ my_number }} is less than 20"
     when: my_number < 20 
 
   - name: print this is less than 20 or not
     ansible.builtin.debug:
-     msg: "given number is {{ my_numer }} is greater than are equal to 20"
+     msg: "given number is {{ my_number }} is greater than are equal to 20"
     when: my_number | int >= 20 #condition statement
 
 
