--- a/13-conditions.yaml
+++ b/13-conditions.yaml
@@ -2,11 +2,11 @@
   hosts: local
   connection: local
   vars: 
-   my_numer: 15
+   my_number: 15
   tasks:
   - name: print this is less than 20 or not
     ansible.builtin.debug:
-     msg: "given number is {{ my_number }} is less than 20"
+     msg: "given number {{ my_number }} is less than 20"
     when: my_number < 20 
 
   - name: print this is less than 20 or not
