--- a/13-conditions.yaml
+++ b/13-conditions.yaml
@@ -1,8 +1,12 @@
 - name: check number is less than 20 or not
   hosts: local
   connection: local
-  vars: 
-   my_number: 15
+  vars_prompt:
+  - name: my_number
+    prompt: enter the number please
+    private: false
+  # vars: 
+  #  my_number: 15
   tasks:
   - name: print this is less than 20 or not
     ansible.builtin.debug:
