--- a/13-conditions.yaml
+++ b/13-conditions.yaml
@@ -11,7 +11,7 @@
   - name: print this is less than 20 or not
     ansible.builtin.debug:
      msg: "given number {{ my_number }} is less than 20"
-    when: my_number < 20 
+    when: my_number | int < 20 
 
   - name: print this is less than 20 or not
     ansible.builtin.debug:
