--- a/14-gathering-facts.yaml
+++ b/14-gathering-facts.yaml
@@ -3,5 +3,5 @@
   connection: local
   tasks:
   - name: print the facts
-    ansibile.builtin.debug:
+    ansible.builtin.debug:
      msg: "{{ ansible_facts }}"
