--- a/15-conditions1.yaml
+++ b/15-conditions1.yaml
@@ -8,7 +8,7 @@
      state: present
     when: ansible_os_family == "RedHat"
 
-  - name: install nginx if debian
+  - name: install nginx if Debian
     ansible.builtin.apt:
      name: nginx
      state: present
