--- a/19-functions.yaml
+++ b/19-functions.yaml
@@ -11,3 +11,11 @@
     ansible.builtin.debug:
      msg: "{{ greeting | upper }}"
 
+  - name: convert to lower
+    vars: 
+     greeting: "Hello Ramesh"
+    ansible.builtin.debug:
+     msg: "{{ greeting | lower }}"
+
+  
+
