--- a/19-functions.yaml
+++ b/19-functions.yaml
@@ -23,5 +23,11 @@
     ansible.builtin.debug:
      msg: "Get the unique values is : {{ values | unique}}"
 
+  - name: get the min and max values
+    vars: 
+     values: [3,5,1,91,82,1,3,44]
+    ansible.builtin.debug:
+     msg: "min : {{ values | min }}, max : {{ values | max }}"
+
   
 
