--- a/19-functions.yaml
+++ b/19-functions.yaml
@@ -33,7 +33,7 @@
     vars: 
      course:
       name: "DevOps"
-      duration: 120 hours
+      duration: 120
       trainer: "sivakumar"
     ansible.builtin.debug:
      msg: "{{ course || dic2items }}"
