--- a/19-functions.yaml
+++ b/19-functions.yaml
@@ -38,14 +38,14 @@
     ansible.builtin.debug:
       msg: "{{ course | dict2items }}"
 
-  # - name: convert the map to list
-  #   vars: 
-  #    course:
-  #     name: "DevOps"
-  #     duration: 120
-  #     trainer: "sivakumar"
-  #   ansible.builtin.debug:
-  #    msg: "{{ course || dic2items }}"
+  - name: convert the map to list
+    vars: 
+     course:
+       name: "DevOps"
+       duration: 120
+       trainer: "sivakumar"
+    ansible.builtin.debug:
+     msg: "{{ course || dic2items }}"
 
   
 
