--- a/19-functions.yaml
+++ b/19-functions.yaml
@@ -32,20 +32,12 @@
   - name: convert map to list
     vars:
       course:
-        name: "DevOps with AWS"
+        name: DevOps with AWS
         duration: 120
-        trainer: "sivakumar reddy"
+        trainer: sivakumar reddy
     ansible.builtin.debug:
       msg: "{{ course | dict2items }}"
 
-  - name: convert the map to list
-    vars: 
-     course:
-       name: "DevOps"
-       duration: 120
-       trainer: "sivakumar"
-    ansible.builtin.debug:
-      msg: "{{ course | dict2items }}"
 
   
 
