--- a/19-functions.yaml
+++ b/19-functions.yaml
@@ -36,7 +36,7 @@
         duration: 120
         trainer: sivakumar reddy
     ansible.builtin.debug:
-      msg: "{{ course | dict2items }}"
+      msg: " course info: {{ course | dict2items }}"
 
 
   
