--- a/19-functions.yaml
+++ b/19-functions.yaml
@@ -37,7 +37,14 @@
         trainer: sivakumar reddy
     ansible.builtin.debug:
       msg: " course info: {{ course | dict2items }}"
-
+  - name: convert list to map
+    vars:
+      course:
+       - {'key': 'name', 'value': 'DevOps with AWS'}
+       - {'key': 'duration', 'value': 120}
+       - {'key': 'trainer', 'value': 'sivakumar reddy'}
+    ansible.builtin.debug:
+      msg: " course info: {{ course | items2dict }}"
 
   
 
