--- a/20-command_shell.yaml
+++ b/20-command_shell.yaml
@@ -8,7 +8,7 @@
     register: output
   
   - name: print the output
-    anaible.builtin.debug:
+    ansible.builtin.debug:
      msg: "{{ output }}"
 
    
