--- a/20-command_shell.yaml
+++ b/20-command_shell.yaml
@@ -20,5 +20,16 @@
     ansible.builtin.debug:
      msg: "{{ output1 }}"
 
+  - name: check the process
+    ansible.builtin.shell: ps -ef | grep ssh
+    register: output
+
+  - name: check the process
+    ansible.builtin.command: ps -ef | grep ssh
+    register: output
+  
+
+
+
    
      
