--- a/20-command_shell.yaml
+++ b/20-command_shell.yaml
@@ -30,7 +30,11 @@
 
   - name: check the process
     ansible.builtin.command: ps -ef | grep ssh
-    register: result
+    register: ssh_result1
+
+  - name: check the process
+    ansible.builtin.debug: 
+     msg: "{{ ssh_result1 }}"
   
 
 
