--- a/20-command_shell.yaml
+++ b/20-command_shell.yaml
@@ -28,13 +28,13 @@
     ansible.builtin.debug: 
      msg: "{{ ssh_result }}"
 
-  - name: check the process
-    ansible.builtin.command: ps -ef | grep ssh
-    register: ssh_output1
+  # - name: check the process
+  #   ansible.builtin.command: ps -ef | grep ssh
+  #   register: ssh_output1
 
-  - name: check the process
-    ansible.builtin.debug: 
-     msg: "{{ ssh_result1 }}"
+  # - name: check the process
+  #   ansible.builtin.debug: 
+  #    msg: "{{ ssh_result1 }}"
   
 
 
