--- a/20-command_shell.yaml
+++ b/20-command_shell.yaml
@@ -28,9 +28,9 @@
     ansible.builtin.debug: 
      msg: "{{ ssh_result }}"
 
-  # - name: check the process
-  #   ansible.builtin.command: ps -ef | grep ssh
-  #   register: ssh_output1
+  - name: check the process
+    ansible.builtin.command: ps -ef | grep ssh
+    register: ssh_result
 
   # - name: check the process
   #   ansible.builtin.debug: 
