--- a/20-command_shell.yaml
+++ b/20-command_shell.yaml
@@ -32,9 +32,9 @@
     ansible.builtin.command: ps -ef | grep ssh
     register: ssh_result
 
-  # - name: check the process
-  #   ansible.builtin.debug: 
-  #    msg: "{{ ssh_result1 }}"
+  - name: check the process
+    ansible.builtin.debug: 
+     msg: "{{ ssh_result1 }}"
   
 
 
